--- a/src/pages/timer.astro
+++ b/src/pages/timer.astro
@@ -8,7 +8,7 @@ const times = Array.from({ length: 4 }, (_, i) =>
 ---
 
 <BaseLayout title="サブマリンボイジャー運行状況">
-  <h1>サブマリンボイジャー運行状況</h1>
+  <h1>FF14 サブマリンボイジャー運行状況</h1>
   <p>現在の時刻: {new Date().toLocaleString()}</p>
 
   {
