--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,10 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="FF14 サブマリンボイジャーの残り時間を管理しよう。"
+    />
     <title>{title}</title>
     <link rel="icon" href="/favicon.ico" />
   </head>
