説明を追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import TimerForm from "../components/TimerForm.astro";
 ---
 
-<BaseLayout title="サブマリンボイジャー設定画面">
+<BaseLayout
+  title="サブマリンボイジャー設定画面｜FF14 サブマリンボイジャー時間管理ツール"
+>
   <h1>FF14 サブマリンボイジャー設定画面</h1>
   <p>
     4隻まで登録できます。「残り時間」か「終了日時」を選択・入力して、「運行状況を表示」を押してください。<br
