--- a/src/pages/timer.astro
+++ b/src/pages/timer.astro
@@ -7,7 +7,9 @@ const times = Array.from({ length: 4 }, (_, i) =>
 );
 ---
 
-<BaseLayout title="サブマリンボイジャー運行状況">
+<BaseLayout
+  title="サブマリンボイジャー運行状況｜FF14 サブマリンボイジャー時間管理ツール"
+>
   <h1>FF14 サブマリンボイジャー運行状況</h1>
   <p>現在の時刻: {new Date().toLocaleString()}</p>
 
