--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="FF14 サブマリンボイジャーの残り時間を管理しよう。"
+      content="FF14 サブマリンボイジャー時間管理ツールです。ログインしていなくても残り時間を可視化できます。今は潜水艦のみを設定できます。"
     />
     <title>{title}</title>
     <link rel="icon" href="/favicon.ico" />
