残り時間の表記を変更、timer画面の表示調整

--- a/src/components/TimerForm.astro
+++ b/src/components/TimerForm.astro
@@ -8,7 +8,7 @@ const { id } = Astro.props;
     ><input type="radio" name={`method${id}`} value="relative" checked /> 残り時間</label
   >
   <label
-    ><input type="radio" name={`method${id}`} value="absolute" /> 終了日時</label
+    ><input type="radio" name={`method${id}`} value="absolute" /> 帰還予定時刻</label
   >
 
   <div id={`relative-inputs-${id}`}>
