--- a/src/pages/timer.astro
+++ b/src/pages/timer.astro
@@ -15,10 +15,10 @@ const times = Array.from({ length: 4 }, (_, i) =>
 
   {
     times.map((time, index) => (
-      <p>
-        潜水艦{index + 1}{" "}
-        <span id={`timer${index + 1}`}>データがありません。</span>
+      <p class="title">
+        潜水艦{index + 1}
       </p>
+      <p id={`timer${index + 1}`} class="data">データがありません。</p>
     ))
   }
 
@@ -27,6 +27,16 @@ const times = Array.from({ length: 4 }, (_, i) =>
     onclick="event.preventDefault(); window.location.href = '/' + window.location.search;"
     >再度タイマーを設定する</a
   >
+
+  <style>
+    .title {
+      font-weight: bold;
+      margin-bottom: 0;
+    }
+    .data {
+      margin-top: 5px;
+    }
+  </style>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -43,9 +53,10 @@ const times = Array.from({ length: 4 }, (_, i) =>
               const hours = Math.floor((timeLeft % 86400000) / 3600000);
               const minutes = Math.floor((timeLeft % 3600000) / 60000);
               const seconds = Math.floor((timeLeft % 60000) / 1000);
-              timerElement.innerText = `残り時間: ${days}日 ${hours}時間 ${minutes}分 ${seconds}秒`;
+              timerElement.innerText = `残り: ${days}日 ${hours}時間 ${minutes}分 ${seconds}秒`;
+              timerElement.innerHTML += "<br>";
               // 終了日時、日本時間で表示
-              timerElement.innerText += ` (終了日時: ${new Date(parseInt(time)).toLocaleString("ja-JP")})`;
+              timerElement.innerText += ` (帰還予定時刻: ${new Date(parseInt(time)).toLocaleString("ja-JP")})`;
             } else {
               timerElement.innerText = "到着！（完了）";
             }
