--- a/src/pages/timer.astro
+++ b/src/pages/timer.astro
@@ -11,7 +11,7 @@ const times = Array.from({ length: 4 }, (_, i) =>
   title="サブマリンボイジャー運行状況｜FF14 サブマリンボイジャー時間管理ツール"
 >
   <h1>FF14 サブマリンボイジャー運行状況</h1>
-  <p>現在の時刻: {new Date().toLocaleString()}</p>
+  <p>現在の時刻: {new Date().toLocaleString("ja-JP")}</p>
 
   {
     times.map((time, index) => (
