--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import TimerForm from "../components/TimerForm.astro";
 >
   <h1>FF14 サブマリンボイジャー設定画面</h1>
   <p>
-    4隻まで登録できます。「残り時間」か「終了日時」を選択・入力して、「運行状況を表示」を押してください。<br
+    4隻まで登録できます。「残り時間」か「帰還予定時刻」を選択・入力して、「運行状況を表示」を押してください。<br
     />再設定の場合、時刻が過ぎている場合はリセットされています。
   </p>
   <div id="submarines">
