--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -37,7 +37,7 @@ const attributes = time !== null ? { "data-time": time } : {};
         (timerElement as HTMLElement).innerText =
           `残り時間: ${days}日 ${hours}時間 ${minutes}分 ${seconds}秒`;
       } else {
-        (timerElement as HTMLElement).innerText = "到着！（完了）";
+        (timerElement as HTMLElement).innerText = "探索完了！";
       }
     });
   }
