--- a/src/pages/timer.astro
+++ b/src/pages/timer.astro
@@ -53,12 +53,12 @@ const times = Array.from({ length: 4 }, (_, i) =>
               const hours = Math.floor((timeLeft % 86400000) / 3600000);
               const minutes = Math.floor((timeLeft % 3600000) / 60000);
               const seconds = Math.floor((timeLeft % 60000) / 1000);
-              timerElement.innerText = `残り: ${days}日 ${hours}時間 ${minutes}分 ${seconds}秒`;
+              timerElement.innerText = `残り時間: ${days}日 ${hours}時間 ${minutes}分 ${seconds}秒`;
               timerElement.innerHTML += "<br>";
               // 帰還予定時刻を日本時間で表示
               timerElement.innerText += ` (帰還予定時刻: ${new Date(parseInt(time)).toLocaleString("ja-JP")})`;
             } else {
-              timerElement.innerText = "到着！（完了）";
+              timerElement.innerText = "探索完了！";
             }
           }
         }
