--- a/src/components/TimerForm.astro
+++ b/src/components/TimerForm.astro
@@ -52,7 +52,10 @@ const { id } = Astro.props;
     margin-top: 0.5rem;
     width: 3rem;
     padding: 0.5rem 0.5rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+  }
+  input::placeholder {
+    color: var(--color-lightgray);
   }
   .input-box.-datetime input {
     width: auto;
