--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,10 +13,8 @@ const today = new Date();
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0rem;
     width: 100%;
-    padding: 1rem 1rem;
-    height: 4rem;
+    padding: 1rem 0;
     border-top: 2px solid var(--color-primary);
   }
   .link {
