--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import "@fontsource/zen-kaku-gothic-new";
-import Footer from "../components/Footer.astro";
+import Footer from "./Footer.astro";
 const { title } = Astro.props;
 ---
 
