--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,10 +11,28 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="FF14 サブマリンボイジャー時間管理ツールです。ログインしていなくても残り時間を可視化できます。今は潜水艦のみを設定できます。"
+      content="FF14 サブマリンボイジャー時間管理ツールです。ゲームにログインしていない時も残り時間を確認したかったので作成しました。今は潜水艦4隻分を設定できます。"
     />
     <title>{title}</title>
     <link rel="icon" href="/favicon.ico" />
+    <meta
+      property="og:title"
+      content="FF14 サブマリンボイジャー時間管理ツール"
+    />
+    <meta
+      property="og:description"
+      content="FF14 サブマリンボイジャー時間管理ツールです。ゲームにログインしていない時も残り時間を確認したかったので作成しました。今は潜水艦4隻分を設定できます。"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://submarine-voyager.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://submarine-voyager.vercel.app/ogp.png"
+    />
+    <meta
+      property="og:site_name"
+      content="FF14 サブマリンボイジャー時間管理ツール"
+    />
     <script
       type="text/partytown"
       src="https://www.googletagmanager.com/gtag/js?id=G-JDR7J7W364"></script>
