--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
     <meta property="og:url" content="https://submarine-voyager.vercel.app/" />
     <meta
       property="og:image"
-      content="https://submarine-voyager.vercel.app/ogp.png"
+      content="https://submarine-voyager.vercel.app/ogp.jpg"
     />
     <meta
       property="og:site_name"
