--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,10 +24,10 @@ const { title } = Astro.props;
       content="FF14 サブマリンボイジャー時間管理ツールです。ゲームにログインしていない時も残り時間を確認したかったので作成しました。今は潜水艦4隻分を設定できます。"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://submarine-voyager.vercel.app/" />
+    <meta property="og:url" content="https://ff14-voyager-timer.vercel.app/" />
     <meta
       property="og:image"
-      content="https://submarine-voyager.vercel.app/ogp.jpg"
+      content="https://ff14-voyager-timer.vercel.app/ogp.jpg"
     />
     <meta
       property="og:site_name"
