faviconのパス修正

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
       content="FF14 サブマリンボイジャー時間管理ツールです。ゲームにログインしていない時も残り時間を確認したかったので作成しました。今は潜水艦4隻分を設定できます。"
     />
     <title>{title}</title>
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://ff14-voyager-timer.vercel.app/favicon.ico" />
     <meta
       property="og:title"
       content="FF14 サブマリンボイジャー時間管理ツール"
