--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -103,6 +103,7 @@ const { title } = Astro.props;
     --color-link: #30869e;
     --color-white: #fff;
     --color-lightgray: #c5c2c2;
+    --color-lightblue: #f2f6f7;
   }
   a {
     color: var(--color-link);
