タイトル・説明文を変更

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import TimerSettings from "../components/TimerSettings.jsx";
 ---
 
 <BaseLayout
-  title="サブマリンボイジャー設定画面｜FF14 サブマリンボイジャー時間管理ツール"
+  title="サブマリンボイジャー設定画面｜FF14 サブマリンボイジャー残り時間表示ツール"
 >
   <TimerSettings client:load />
 </BaseLayout>
