--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -2,7 +2,9 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title="Privacy Policy | FF14 サブマリンボイジャー時間管理ツール">
+<BaseLayout
+  title="Privacy Policy | FF14 サブマリンボイジャー残り時間表示ツール"
+>
   <main>
     <div class="container">
       <h1 class="title">プライバシーポリシー</h1>
