--- a/src/pages/timer.astro
+++ b/src/pages/timer.astro
@@ -4,7 +4,7 @@ import TimerDisplay from "../components/TimerDisplay.jsx";
 ---
 
 <BaseLayout
-  title="サブマリンボイジャー運行状況｜FF14 サブマリンボイジャー時間管理ツール"
+  title="サブマリンボイジャー運行状況｜FF14 サブマリンボイジャー残り時間表示ツール"
 >
   <TimerDisplay client:load />
 </BaseLayout>
