--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -46,9 +46,9 @@ const { title } = Astro.props;
     </script>
   </head>
   <body>
-    <div class="container">
+    <main class="main">
       <slot />
-    </div>
+    </main>
     <Footer />
   </body>
 </html>
@@ -120,7 +120,7 @@ const { title } = Astro.props;
     min-height: 100vh;
     color: var(--color-text);
   }
-  .container {
+  .main {
     flex: 1;
     margin: 0 auto;
     padding: 2rem 2rem 4rem 2rem;
