--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -33,10 +33,11 @@ const { title } = Astro.props;
       property="og:site_name"
       content="FF14 サブマリンボイジャー残り時間表示ツール"
     />
-    <script
-      type="text/partytown"
-      src="https://www.googletagmanager.com/gtag/js?id=G-JDR7J7W364"></script>
-    <script type="text/partytown">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JDR7J7W364"
+    ></script>
+    <script is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
