--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -130,8 +130,8 @@ const { title } = Astro.props;
     max-width: 50rem;
     width: 90%;
     border: 1px solid var(--color-text);
-    @media screen and (max-width: 600px) {
-      padding: 1rem 1rem 2rem;
+    @media (max-width: 768px) {
+      padding: 1.5rem 1rem 2rem;
     }
   }
 </style>
