--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import TimerSettings from "../components/TimerSettings.jsx";
+import TimerSettings from "../components/TimerSettings";
 ---
 
 <BaseLayout
