--- a/src/pages/timer.astro
+++ b/src/pages/timer.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import TimerDisplay from "../components/TimerDisplay.jsx";
+import TimerDisplay from "../components/TimerDisplay";
 ---
 
 <BaseLayout
