--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import PrivacyPolicy from "../components/PrivacyPolicy.jsx";
+import PrivacyPolicy from "../components/PrivacyPolicy";
 ---
 
 <BaseLayout
