--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -31,6 +31,7 @@ const today = new Date();
     margin: 0.3rem 0 0;
     font-size: 0.8rem;
     text-align: center;
+    color: var(--text-secondary);
   }
   .copy {
     margin: 0.5rem 0;
