--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -219,6 +219,7 @@ const { title } = Astro.props;
   .main {
     flex: 1;
     margin: 0 auto;
+    padding-bottom: 3rem;
     max-width: 28rem;
     width: 90%;
   }
