時間設定画面のスタイル追加（途中）、一部コンポーネント化

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -20,9 +20,15 @@ import ToggleTheme from "../components/ToggleTheme";
     justify-content: space-between;
     padding: 1rem;
     margin: 0 auto;
+    @media (max-width: 768px) {
+      align-items: center;
+    }
   }
   .lead {
     margin: 0;
     font-size: 0.9rem;
+    @media (max-width: 768px) {
+      font-size: 0.8rem;
+    }
   }
 </style>
