--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,14 +17,14 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="FF14のサブマリンボイジャーの残り時間を表示します。ゲームにログインしていない時に残り時間を確認できます。今は潜水艦4隻分を設定できます。"
+      content="FF14のサブマリンボイジャーの残り時間を表示します。ゲームにログインしていない時に残り時間を確認できます。潜水艦4〜24隻分を設定できます。"
     />
     <title>{title}</title>
     <link rel="icon" href="https://ff14-voyager-timer.vercel.app/favicon.ico" />
     <meta property="og:title" content="FF14 サブマリンボイジャー残り時間表示ツール" />
     <meta
       property="og:description"
-      content="FF14のサブマリンボイジャーの残り時間を表示します。ゲームにログインしていない時に残り時間を確認できます。今は潜水艦4隻分を設定できます。"
+      content="FF14のサブマリンボイジャーの残り時間を表示します。ゲームにログインしていない時に残り時間を確認できます。潜水艦4〜24隻分を設定できます。"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ff14-voyager-timer.vercel.app/" />
